feat: add bottom navigation bar + appbar with search

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
     cupertino_icons: ^1.0.2
     flutter_launcher_icons: ^0.13.1
     flutter_splash_screen: ^1.0.0+6
+    animated_bottom_navigation_bar: ^1.2.0
+    floating_bottom_navigation_bar: ^1.5.2
+    salomon_bottom_bar: ^3.3.2
+    fluent_appbar: ^2.0.0
+    animation_search_bar: ^0.0.10
 
 dev_dependencies:
     flutter_test:
