--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
     very_good_infinite_list: ^0.7.0
     paginable: ^2.0.0
     babstrap_settings_screen: ^0.1.5+1
+    shared_preferences: ^2.1.1
 
 dev_dependencies:
     flutter_test:
