--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ dependencies:
     enhance_stepper: ^0.1.1
     tuple: ^2.0.1
     animated_custom_dropdown: ^1.5.0
+    sqlite3: ^1.11.2
+    path_provider: ^2.0.15
+    sqflite: ^2.2.8+4
+    audioplayers: ^4.1.0
+    file_picker: ^5.3.1
+    path: ^1.8.2
+    flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
     flutter_test:
@@ -78,9 +85,8 @@ flutter:
     uses-material-design: true
 
     # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
+    assets:
+        - assets/sound1.mp3
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
