--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,8 @@ flutter:
 
     # To add assets to your application, add an assets section, like this:
     assets:
-        - assets/sound1.mp3
+        - assets/sound.mp3
+        - assets/speak.png
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
